update multiplier policy features